--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <script type="module" src="./examples/LOD.ts"></script>
+  <script type="module" src="./examples/uniforms-webgpu.ts"></script>
 </body>
 
 </html>
